<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    tools:context=".ui.activity.register.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_iv_app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo"
        app:layout_constraintBottom_toTopOf="@id/register_tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/register_tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_iv_app_icon" />

    <com.rhezarijaya.storiesultra.ui.customview.NameField
        android:id="@+id/register_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/register_email_field"
        app:layout_constraintTop_toBottomOf="@id/register_tv_app_name" />

    <com.rhezarijaya.storiesultra.ui.customview.EmailField
        android:id="@+id/register_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/register_password_field"
        app:layout_constraintTop_toBottomOf="@id/register_name_field" />

    <com.rhezarijaya.storiesultra.ui.customview.PasswordField
        android:id="@+id/register_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/register_btn_register"
        app:layout_constraintTop_toBottomOf="@id/register_email_field" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_field" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>